# NeuralES

./: CHANGELOG.md  CONTRIBUTING.md  DEMO_SCRIPT.md  EXAM_READY.md  LICENSE  PROJECT_SUMMARY.md  QUICK_FIXES.md  README.md  fullColision.glb  fullup.blend  run.bat  setup.ps1
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
backend/: .env  .env.example  ARCHITECTURE.md  README.md  add_created_at.py  add_patient_columns.py  add_user_password_hash.sql  check_db.py  complete_setup.py  complete_setup_v2.py  compute_electrode_mapping.py  compute_mapping_from_glb.py  electrode_eholder_mapping.json  generate_password_hash.py  inspect_glb.py  inspect_gltf.py  inspect_node_mesh.py  install_requirements_psql.ps1  requirements-dev.txt  run.bat  (+15 more)
neurales-web/src-tauri/: Cargo.toml  neurales.db  tauri.conf.json
neurales-web/src-tauri/capabilities/: default.json
neurales-web/src-tauri/icons/: icon.icns
neurales-web/src-tauri/neurales_desktop_data/: devices.json
neurales-web/src-tauri/src/: app_state.rs  error.rs  lib.rs  main.rs
neurales-web/src-tauri/src/controllers/: auth_controller.rs  device_controller.rs  mod.rs  patient_controller.rs  result_controller.rs
neurales-web/src-tauri/src/models/: auth.rs  device.rs  mod.rs  patient.rs  result_session.rs
neurales-web/src-tauri/src/repositories/: device_repository.rs  mod.rs  patient_repository.rs  result_repository.rs
neurales-web/src-tauri/src/services/: auth_service.rs  device_service.rs  mod.rs  patient_service.rs  result_service.rs
neurales-web/src-tauri/src/storage/: json_store.rs
(+153 files in other folders)
