[package]
name = "neurales_desktop"
version = "0.1.0"
description = "NeuralES desktop shell powered by Tauri"
authors = ["NeuralES Team"]
edition = "2021"

[lib]
name = "neurales_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
